# EventADT

./: CMakeLists.txt
src/: Event.c  Event.h
test/: CMakeLists.txt  Event.Tests.cpp  Tests.cpp
test/event_helpers/: Methods.c
test/test_src/: Methods.h
